<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scoreboard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/transparent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty"
        android:textSize="25sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:padding="15dp"
        >

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/one"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/two"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/three"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/four"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/five"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/six"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/seven"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/eight"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/nine"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:onClick="numberClick"
            android:text="@string/zero"
            android:layout_margin="4dp"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="10dp"
        android:rowCount="2">

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:onClick="operationsClick"
            android:text="@string/division"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:onClick="operationsClick"
            android:text="@string/multiplication"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:onClick="operationsClick"
            android:text="@string/addition"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/subtraction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:onClick="operationsClick"
            android:text="@string/subtraction"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:onClick="resetClick"
            android:text="@string/reset"
            android:layout_margin="4dp"
            android:layout_columnSpan="2"/>
        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:onClick="resultClick"
            android:text="@string/equals"
            android:layout_margin="4dp"
            android:layout_columnSpan="2"/>


    </GridLayout>


</LinearLayout>